# roguepupu2

./: .gitignore  CMakeLists.txt  Makefile  README.md  ideas.txt  run.sh  width1
.github/workflows/: build.yml
data/: creatures.json  entities.json  fungi.json  items.json  loot_tables.json
data/abilities/: innate.json  routine.json  spells.json
data/colors/: cells.json  liquids.json
data/components/: definitions.json  tag_dependencies.json
data/creatures/: goblins.json  players.json
data/entities/creatures/: goblins.json  players.json  spiders.json  test_creatures.json
data/entities/furniture/: chests.json  containers.json  utilities.json
data/entities/items/: armor.json  bottles.json  gemstones.json  organic.json  tools.json  weapons.json
data/entities/nature/: mushrooms.json  plants.json  rocks.json  springs.json  webs.json
data/entities/plants/: mushrooms.json
data/entities/transition/: portals.json
data/furniture/: chests.json
data/generation/: cave.json  world.json
data/generation/cave/: conf.json  sizes.json
data/items/: armor.json  weapons.json
data/plants/: mushrooms.json
data/world/: generation.json  locations.json
data/world/locations/: goblins.json  natural.json
headers/: Ability.hpp  AbilityDatabase.hpp  Area.hpp  Cave.hpp  CaveGenerator.hpp  Cell.hpp  Color.hpp  ColorPair.hpp  Components.hpp  Creature.hpp  DevTools.hpp  Dice.hpp  ECS.hpp  Effect.hpp  Entity.hpp  EntityFactory.hpp  Event.hpp  Fungus.hpp  Game.hpp  GameLogger.hpp  GameState.hpp  InputWindow.hpp  Intent.hpp  Light.hpp  Liquid.hpp  LiquidMixture.hpp  LocationDatabase.hpp  Menu.hpp  MenuBtn.hpp  MenuElt.hpp  MenuNum.hpp  MenuTxt.hpp  OutputWindow.hpp  Parser.hpp  Renderer.hpp  Stream.hpp  Tester.hpp  Testing.hpp  UI.hpp  Unicode.hpp  (+4 more)
headers/UI/: Dialog.hpp  Menu.hpp  MenuBtn.hpp  MenuNum.hpp  MenuTxt.hpp  UI.hpp
headers/UI/menus/: ControlsMenu.hpp  DevMenu.hpp  SettingsMenu.hpp
headers/components/: Components.hpp
headers/core/: common.hpp  paths.hpp
headers/database/: AbilityDatabase.hpp  EntityFactory.hpp  LocationDatabase.hpp  LootTableDatabase.hpp
headers/domain/: Ability.hpp  Actor.hpp  Attack.hpp  Attribute.hpp  Cave.hpp  Cell.hpp  Color.hpp  ColorPair.hpp  Conditions.hpp  Damage.hpp  Dice.hpp  Effect.hpp  Event.hpp  EventQueue.hpp  Intent.hpp  Liquid.hpp  LiquidMixture.hpp  LootTable.hpp  NcursesAttr.hpp  Position.hpp  Target.hpp  Trigger.hpp  World.hpp
headers/editor/: CaveEditor.hpp  Editor.hpp  EntityEditor.hpp
headers/generation/: CaveGenerator.hpp  EntitySpawner.hpp
headers/infrastructure/: CaveGenerator.hpp  CharacterCreation.hpp  DevSettings.hpp  EntitySpawner.hpp  EventLogger.hpp  EventQueue.hpp  Game.hpp  GameContext.hpp  GameSettings.hpp  GameState.hpp
headers/systems/: AISystem.hpp  AbilitySystem.hpp  AccessSystem.hpp  ActionSystem.hpp  CombatSystem.hpp  Components.hpp  ConditionSystem.hpp  ContextSystem.hpp  DamageSystem.hpp  EffectSystem.hpp  EnvironmentSystem.hpp  EquipmentSystem.hpp  EventSystem.hpp  ExamineSystem.hpp  FactionSystem.hpp  GatheringSystem.hpp  InventorySystem.hpp  MovementSystem.hpp  StatsSystem.hpp  TransitionSystem.hpp  TriggerSystem.hpp  VisionSystem.hpp  VisualEffectSystem.hpp
headers/systems/action/: AISystem.hpp  AbilitySystem.hpp  ActionSystem.hpp  ConditionSystem.hpp  EffectSystem.hpp  EventSystem.hpp  TriggerSystem.hpp
headers/systems/combat/: AttackSystem.hpp  CombatSystem.hpp  DamageSystem.hpp
headers/systems/crafting/: GatheringSystem.hpp
headers/testing/: DevTools.hpp  Tester.hpp
headers/utils/: ANSI.hpp  Debug.hpp  ECS.hpp  Error.hpp  JsonUtils.hpp  Log.hpp  Math.hpp  Parser.hpp  Random.hpp  Range.hpp  Regex.hpp  Screen.hpp  Time.hpp  Unicode.hpp  Utils.hpp  Vec2.hpp
scripts/: build.sh  enumerate_entities.py  gitrepo.sh  iwyu.sh
sources/: Ability.cpp  AbilityDatabase.cpp  Area.cpp  Cave.cpp  CaveGenerator.cpp  CaveGenerator.hpp  Cell.cpp  Color.cpp  ColorPair.cpp  Creature.cpp  DevTools.cpp  Dice.cpp  ECS.cpp  Effect.cpp  Entity.cpp  EntityFactory.cpp  EntitySpawner.cpp  Fungus.cpp  Game.cpp  GameLogger.cpp  InputWindow.cpp  Light.cpp  LiquidMixture.cpp  LocationDatabase.cpp  Menu.cpp  MenuBtn.cpp  MenuElt.cpp  MenuTxt.cpp  OutputWindow.cpp  Parser.cpp  Renderer.cpp  Stream.cpp  Tester.cpp  UI.cpp  Window.cpp  World.cpp  main.cpp
sources/UI/: Dialog.cpp  Menu.cpp  MenuBtn.cpp  MenuElt.cpp  MenuTxt.cpp  UI.cpp
sources/UI/menus/: DevMenu.cpp  (+1 more)
sources/database/: AbilityDatabase.cpp  EntityFactory.cpp  LocationDatabase.cpp  LootTableDatabase.cpp
sources/domain/: Cave.cpp  Cell.cpp  Color.cpp  ColorPair.cpp  Damage.cpp  Dice.cpp  LiquidMixture.cpp  World.cpp
sources/editor/: CaveEditor.cpp  Editor.cpp  EntityEditor.cpp
sources/generation/: CaveGenerator.cpp  EntitySpawner.cpp
sources/infrastructure/: CharacterCreation.cpp  DevTools.cpp  EventLogger.cpp  Game.cpp  GameLogger.cpp
sources/systems/: AISystem.cpp  AbilitySystem.cpp  AccessSystem.cpp  ActionSystem.cpp  CombatSystem.cpp  ConditionSystem.cpp  ContextSystem.cpp  DamageSystem.cpp  EffectSystem.cpp  EnvironmentSystem.cpp  EquipmentSystem.cpp  EventSystem.cpp  ExamineSystem.cpp  FactionSystem.cpp  GatheringSystem.cpp  InventorySystem.cpp  MovementSystem.cpp  PositionSystem.cpp  RenderingSystem.hpp  StatsSystem.cpp  TransitionSystem.cpp  TriggerSystem.cpp  VisionSystem.cpp  VisualEffectSystem.cpp
sources/testing/: DevTools.cpp  Tester.cpp
sources/utils/: Debug.cpp  JsonUtils.cpp  Log.cpp  Parser.cpp
tests/: ai_test.cpp  alignment_test.cpp  attack_test.cpp  combat_test.cpp  damage_test.cpp  equip_and_unequip.cpp  equipment_test.cpp  generation_test.cpp  helpers.hpp  line_of_sight_test.cpp  movement_test.cpp  print_test.cpp  sanity_test.cpp  state_test.cpp  weapon_test.cpp
tests/helpers/: registry_fixture.hpp  test_cave.hpp
tests/integration/: cave_generation_test.cpp  combat_test.cpp  damage_test.cpp  equipment_test.cpp  get_attack_range_test.cpp  opinion_test.cpp
tests/unit/: Vec2_test.cpp  ai_test.cpp  alignment_test.cpp  cave_generation_test.cpp  movement_test.cpp  print_test.cpp  range_test.cpp  state_test.cpp
(+44 files in other folders)
